Fixed the margin and the gap in the form

--- a/src/task-management/components/FormTask/FormTask.module.css
+++ b/src/task-management/components/FormTask/FormTask.module.css
@@ -3,12 +3,13 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   width: 100%;
 }
 
 .title {
   margin: 0;
+  margin-bottom: 1rem;
   font-size: 4rem;
   text-align: center;
 }
